--- a/highlight/templates/highlight_detail.html
+++ b/highlight/templates/highlight_detail.html
@@ -76,7 +76,7 @@
             <tbody class="bg-white divide-y divide-gray-200">
               <thead class="bg-gray-100">
               <tr>
-                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{highlight.home.}}{{highlight.home.team}}</td>
+                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">{{highlight.home.team}}</td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{highlight.home.played}}</td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{highlight.home.won}}</td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">{{highlight.home.drawn}}</td>
